--- a/html/hadwin_tanis.html
+++ b/html/hadwin_tanis.html
@@ -9,16 +9,17 @@
 <body>
     <header>
         <ul class="nav-ul">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="html/almgren_silas.html">Almgren_Silas</a></li>
-            <li><a href="html/hadwin_tanis.html">Hadwin_Tanis</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="almgren_silas.html">Almgren_Silas</a></li>
+            <li><a href="hadwin_tanis.html">Hadwin_Tanis</a></li>
         </ul>
     </header>
     <div class="main-container">
 
     </div>
     <footer>
-
+        <p>"""You miss one hundred percent of the shots you don't take" - Wayne Gretzky" - Micheal Scott" - Tanis and
+            Silas</p>
     </footer>
 </body>
 
