--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
             <li><a href="html/hadwin_tanis.html">Hadwin_Tanis</a></li>
         </ul>
     </header>
+
     <div class="main-container">
-
+        <img src="images/watermelon.jpg" alt="WATERMELLLLLOOOON" id="watermelon">
     </div>
-    <footer>
 
+    <footer>
+        <p>"""You miss one hundred percent of the shots you don't take" - Wayne Gretzky" - Micheal Scott" - Tanis and
+            Silas</p>
     </footer>
 </body>
 
