--- a/html/almgren_silas.html
+++ b/html/almgren_silas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Lab 9</title>
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <a href="../index.html"><img src="../images/watermelon.jpg" class="nav-img" alt="Nav img"></a>
         <ul class="nav-ul">
             <li><a href="../index.html">Home</a></li>
             <li><a href="almgren_silas.html">Almgren_Silas</a></li>
