--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Lab 9</title>
@@ -8,6 +8,7 @@
 
 <body>
     <header>
+        <a href="index.html"><img src="images/watermelon.jpg" class="nav-img" alt="Nav img"></a>
         <ul class="nav-ul">
             <li><a href="index.html">Home</a></li>
             <li><a href="html/almgren_silas.html">Almgren_Silas</a></li>
@@ -15,8 +16,10 @@
         </ul>
     </header>
 
-    <div class="main-container">
-        <img src="images/watermelon.jpg" alt="WATERMELLLLLOOOON" id="watermelon">
+    <div class="main-container" id="home-main">
+        <h1>Home</h1>
+        <img src="images/watermelon.jpg" alt="watermelon" id="watermelon">
+        <p><em>"Home is where the melon is"</em></p>
     </div>
 
     <footer>
